# ServiceDeck

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  main.cpp  mainwindow.cpp  mainwindow.h  servicemanager.cpp  servicemanager.h
debian/: changelog  control  copyright
src/: CMakeLists.txt  main.cpp
src/models/: CMakeLists.txt  app_preferences.cpp  app_preferences.h  service_filter_model.cpp  service_filter_model.h  service_table_model.cpp  service_table_model.h  unit_model.cpp  unit_model.h
src/presenters/: CMakeLists.txt  mainpresenter.cpp  mainpresenter.h
src/resources/: dark_theme.qss  light_theme.qss  resources.qrc  servicedeck.desktop
src/services/: CMakeLists.txt  icon_helper.cpp  icon_helper.h  pkexec_helper.cpp  pkexec_helper.h  systemd_dbus.cpp  systemd_dbus.h  unit_file_helper.cpp  unit_file_helper.h
src/views/: CMakeLists.txt  createservicedialog.cpp  createservicedialog.h  mainwindow.cpp  mainwindow.h  preferencesdialog.cpp  preferencesdialog.h  servicedetailpanel.cpp  servicedetailpanel.h  servicetoolbar.cpp  servicetoolbar.h
